--- a/src/index.html
+++ b/src/index.html
@@ -9,21 +9,7 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <form id="search-form">
-      <input
-        class="search-input"
-        type="text"
-        name="searchQuery"
-        autocomplete="off"
-        placeholder="Search images..."
-      />
-      <button class="search-button" type="submit">Search</button>
-    </form>
-    <div class="container">
-      <div class="gallery">
-      </div>
-    </div>
-    <button type="button" class="load-more">Load more</button>
+    <include src="./partials/example.html"></include>
     <script type = 'module' src="./index.js"></script>
   </body>
 </html>
